--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,35 @@
-django_simple_elasticsearch.egg-info
-*.pyc
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+nosetests.xml
+htmlcov
+
 .Python
 .DS_Store
 .idea
-build
-lib
-include
-src
-bin
-share
-dist
-MANIFEST
+
+# Sphinx
+docs/_build
