--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 #install: pip install -r requirements.txt
 install:
-  - pip install -q Django==$DJANGO --use-mirrors
+  - pip install -q Django==$DJANGO
   - pip install coveralls
 #  - pip install -r test_requirements.pip
 script:
