--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
-# Config file for automatic testing at travis-ci.org
-
 language: python
-
 python:
   - "3.4"
   - "3.3"
@@ -21,12 +18,9 @@ matrix:
       env: DJANGO=1.4.16
     - python: "3.4"
       env: DJANGO=1.4.16
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-#install: pip install -r requirements.txt
 install:
   - pip install -q Django==$DJANGO
-  - pip install coveralls
-#  - pip install -r test_requirements.pip
+  - pip install coveralls mock
 script:
   - coverage run --source=simple_elasticsearch setup.py test
 after_success:
