--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
-  - "3.4"
-  - "3.3"
+#  - "3.4"
+#  - "3.3"
   - "2.7"
   - "2.6"
   - "pypy"
@@ -14,10 +14,10 @@ matrix:
   exclude:
     - python: "2.6"
       env: DJANGO=1.7.1
-    - python: "3.3"
-      env: DJANGO=1.4.16
-    - python: "3.4"
-      env: DJANGO=1.4.16
+#    - python: "3.3"
+#      env: DJANGO=1.4.16
+#    - python: "3.4"
+#      env: DJANGO=1.4.16
 install:
   - pip install -q Django==$DJANGO
   - pip install coveralls mock
