--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,12 @@ envlist =
     py27-django14,
     py27-django15,
     py27-django16,
-    py27-django17
+    py33-django15,
+    py33-django16,
+    py33-django17,
+    py34-django15,
+    py34-django16,
+    py34-django17
 
 [testenv]
 commands = coverage run --source=simple_elasticsearch setup.py test
@@ -55,6 +60,48 @@ deps=
 
 [testenv:py27-django17]
 basepython=python2.7
+deps=
+    django==1.7.1
+    coverage
+    mock
+
+[testenv:py33-django15]
+basepython=python3.3
+deps=
+    django==1.5.11
+    coverage
+    mock
+
+[testenv:py33-django16]
+basepython=python3.3
+deps=
+    django==1.6.8
+    coverage
+    mock
+
+[testenv:py33-django17]
+basepython=python3.3
+deps=
+    django==1.7.1
+    coverage
+    mock
+
+[testenv:py34-django15]
+basepython=python3.4
+deps=
+    django==1.5.11
+    coverage
+    mock
+
+[testenv:py34-django16]
+basepython=python3.4
+deps=
+    django==1.6.8
+    coverage
+    mock
+
+[testenv:py34-django17]
+basepython=python3.4
 deps=
     django==1.7.1
     coverage
