--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,25 @@ python:
   - "2.6"
   - "pypy"
 env:
-  - DJANGO=1.4.16
-  - DJANGO=1.5.11
-  - DJANGO=1.6.8
-  - DJANGO=1.7.1
+  - DJANGO=1.4.20
+  - DJANGO=1.5.12
+  - DJANGO=1.6.11
+  - DJANGO=1.7.7
+  - DJANGO=1.8
 matrix:
   exclude:
     - python: "2.6"
-      env: DJANGO=1.7.1
+      env: DJANGO=1.7.7
+    - python: "2.6"
+      env: DJANGO=1.8
     - python: "3.3"
-      env: DJANGO=1.4.16
+      env: DJANGO=1.4.20
     - python: "3.4"
-      env: DJANGO=1.4.16
+      env: DJANGO=1.4.20
+    - python: "3.4"
+      env: DJANGO=1.5.12
+    - python: "3.4"
+      env: DJANGO=1.6.11
 install:
   - pip install -q Django==$DJANGO
   - pip install coveralls
