--- a/tox.ini
+++ b/tox.ini
@@ -1,124 +1,19 @@
 [tox]
 envlist =
-    py26-django14,
-    py26-django15,
-    py26-django16,
-    py27-django14,
-    py27-django15,
-    py27-django16,
-    py27-django17,
-    py27-django18,
-    py27-django19,
-    py33-django15,
-    py33-django16,
-    py33-django17,
-    py33-django18,
-    py33-django19,
-    py34-django17,
-    py34-django18,
-    py34-django19
+    py{27,32,33,34,35}-django18,
+    py{27,34,35}-django19
+    py{27,34,35}-django{19,110}
 
 [testenv]
+basepython =
+    py27: python2.7
+    py32: python3.2
+    py33: python3.3
+    py34: python3.4
+    py35: python3.5
+deps=
+    django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<1.10
+    django110: Django>=1.10,<1.11
+    coverage
 commands = coverage run --source=simple_elasticsearch setup.py test
-
-[testenv:py26-django14]
-basepython=python2.6
-deps=
-    django==1.4.20
-    coverage
-
-[testenv:py26-django15]
-basepython=python2.6
-deps=
-    django==1.5.12
-    coverage
-
-[testenv:py26-django16]
-basepython=python2.6
-deps=
-    django==1.6.11
-    coverage
-
-[testenv:py27-django14]
-basepython=python2.7
-deps=
-    django==1.4.20
-    coverage
-
-[testenv:py27-django15]
-basepython=python2.7
-deps=
-    django==1.5.12
-    coverage
-
-[testenv:py27-django16]
-basepython=python2.7
-deps=
-    django==1.6.11
-    coverage
-
-[testenv:py27-django17]
-basepython=python2.7
-deps=
-    django==1.7.7
-    coverage
-
-[testenv:py27-django18]
-basepython=python2.7
-deps=
-    django==1.8
-    coverage
-
-[testenv:py27-django19]
-basepython=python2.7
-deps=
-    django==1.9
-    coverage
-
-[testenv:py33-django15]
-basepython=python3.3
-deps=
-    django==1.5.12
-    coverage
-
-[testenv:py33-django16]
-basepython=python3.3
-deps=
-    django==1.6.11
-    coverage
-
-[testenv:py33-django17]
-basepython=python3.3
-deps=
-    django==1.7.7
-    coverage
-
-[testenv:py33-django18]
-basepython=python3.3
-deps=
-    django==1.8
-    coverage
-
-[testenv:py33-django19]
-basepython=python3.3
-deps=
-    django==1.9
-    coverage
-
-[testenv:py34-django17]
-basepython=python3.4
-deps=
-    django==1.7.7
-    coverage
-
-[testenv:py34-django18]
-basepython=python3.4
-deps=
-    django==1.8
-    coverage
-
-[testenv:py34-django19]
-basepython=python3.4
-deps=
-    django==1.9
-    coverage
