Simplifying the travis and tox configurations - compatible with travis-ci now.

--- a/tox.ini
+++ b/tox.ini
@@ -4,16 +4,17 @@ envlist =
     py{27,34,35}-django19
     py{27,34,35}-django{19,110}
 
+[tox:travis]
+2.7 = py27
+3.2 = py32
+3.3 = py33
+3.4 = py34
+3.5 = py35
+
 [testenv]
-basepython =
-    py27: python2.7
-    py32: python3.2
-    py33: python3.3
-    py34: python3.4
-    py35: python3.5
 deps=
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
-    coverage
+    coverage<4.0
 commands = coverage run --source=simple_elasticsearch setup.py test
