--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,46 @@
 language: python
 python:
+  - "3.5"
   - "3.4"
   - "3.3"
   - "2.7"
   - "2.6"
   - "pypy"
 env:
-  - DJANGO=1.4.20
+  - DJANGO=1.4.22
   - DJANGO=1.5.12
   - DJANGO=1.6.11
-  - DJANGO=1.7.7
-  - DJANGO=1.8
+  - DJANGO=1.7.11
+  - DJANGO=1.8.17
+  - DJANGO=1.9.12
 matrix:
   exclude:
     - python: "2.6"
-      env: DJANGO=1.7.7
+      env: DJANGO=1.7.11
     - python: "2.6"
-      env: DJANGO=1.8
+      env: DJANGO=1.8.17
+    - python: "2.6"
+      env: DJANGO=1.9.12
     - python: "3.3"
-      env: DJANGO=1.4.20
+      env: DJANGO=1.4.22
+    - python: "3.3"
+      env: DJANGO=1.9.12
     - python: "3.4"
-      env: DJANGO=1.4.20
+      env: DJANGO=1.4.22
     - python: "3.4"
       env: DJANGO=1.5.12
     - python: "3.4"
       env: DJANGO=1.6.11
+    - python: "3.5"
+      env: DJANGO=1.4.22
+    - python: "3.5"
+      env: DJANGO=1.4.22
+    - python: "3.5"
+      env: DJANGO=1.5.12
+    - python: "3.5"
+      env: DJANGO=1.6.11
+    - python: "3.5"
+      env: DJANGO=1.7.11
 install:
   - pip install -q Django==$DJANGO
   - pip install coveralls
