--- a/tox.ini
+++ b/tox.ini
@@ -8,12 +8,15 @@ envlist =
     py27-django16,
     py27-django17,
     py27-django18,
+    py27-django19,
     py33-django15,
     py33-django16,
     py33-django17,
     py33-django18,
+    py33-django19,
     py34-django17,
-    py34-django18
+    py34-django18,
+    py34-django19
 
 [testenv]
 commands = coverage run --source=simple_elasticsearch setup.py test
@@ -66,6 +69,12 @@ deps=
     django==1.8
     coverage
 
+[testenv:py27-django19]
+basepython=python2.7
+deps=
+    django==1.9
+    coverage
+
 [testenv:py33-django15]
 basepython=python3.3
 deps=
@@ -90,6 +99,12 @@ deps=
     django==1.8
     coverage
 
+[testenv:py33-django19]
+basepython=python3.3
+deps=
+    django==1.9
+    coverage
+
 [testenv:py34-django17]
 basepython=python3.4
 deps=
@@ -100,4 +115,10 @@ deps=
 basepython=python3.4
 deps=
     django==1.8
+    coverage
+
+[testenv:py34-django19]
+basepython=python3.4
+deps=
+    django==1.9
     coverage
