--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,8 +4,7 @@ include HISTORY.rst
 include LICENSE
 include README.rst
 
-recursive-include tests *
-recursive-exclude * __pycache__
-recursive-exclude * *.py[co]
-
 recursive-include docs *.rst conf.py Makefile make.bat
+recursive-include tests *
+global-exclude *.py[cod] __pycache__ *.so
+
