--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
     py{27,32,33,34,35}-django18,
-    py{27,34,35}-django{19,110}
+    py{27,34,35}-django{19,110,111}
+    py{36}-django{111}
 
 [tox:travis]
 2.7 = py27
@@ -9,11 +10,13 @@ envlist =
 3.3 = py33
 3.4 = py34
 3.5 = py35
+3.6 = py36
 
 [testenv]
 deps=
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<2.0
     coverage<4.0
 commands = coverage run --source=simple_elasticsearch setup.py test
